--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require": {
         "php": "^8.0",
         "filament/filament": "^2.0",
-        "illuminate/contracts": "^8.0|^9.0",
+        "illuminate/contracts": "^8.0|^9.0|^10.0",
         "laravel/socialite": "^5.5",
         "livewire/livewire": "^2.10",
         "spatie/laravel-package-tools": "^1.9.2"
